<resources>
    <string name="app_name">My Application</string>
    <string name="save_to_db">Save To DB</string>
    <string name="entry_successful">Entry Successful</string>
    <string name="logout">Logout</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="or">OR</string>
    <string name="register">Register</string>
    <string name="read_db">Read DB</string>
    <string name="save_to_cloud_firestore">Save To Cloud FireStore</string>
    <string name="save_to_realtime_database">Save To RealTime Database</string>
    <string name="read_from_realtime_database">Read from Realtime Database</string>
    <string name="read_from_cloud_firestore">Read from Cloud Firestore</string>
    <string name="enter_your_query_here">Enter your query here</string>
    <string name="ask">Ask</string>
    <string name="waiting">Waiting...</string>
    <string name="or_log_in_with_email">OR Sign in using Email id</string>
    <string name="default_web_client_id">997212419478-973m6touh1f73c2cu9qj15f25cvnf1vg.apps.googleusercontent.com</string>
    <string name="Dummy_Crash">Crash Test</string>
</resources>